--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
   justify-content: space-between;
   align-items: center;
 
+  padding: 1% px;
+
+  border: 2px solid black;
+  border-radius: 1%;
+
   background-color: lightgray;
 }
 
@@ -36,39 +41,38 @@ body {
   height: 80%;
 
   display: flex;
-
-  background-color: whitesmoke;
 }
 
 .numbers {
-  width: 66%;
+  width: 60%;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
 }
 
 .utils {
-  width: 33%;
+  width: 40%;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
 }
 
 .numbers button {
-  width: 33%;
-  height: 20%;
+  width: 33.33%;
+  height: 25%;
+
+  border-radius: 10%;
 
   background-color: gray;
 }
 
 .utils button {
   width: 50%;
-  height: 20%;
+  height: 25%;
+
+  border-radius: 10%;
 
   background-color: orange;
 }
-
-<body>
-  <div class="calculator">
-    <div class="display"></div>
-    <div class="keypad">
-      <div class="numbers"></div>
-      <div class="utils"></div>
-    </div>
-  </div>
-
-
